@@ -67,6 +67,7 @@ module glide_types
   use glimmer_coordinates
   use glimmer_map_types, pi_dummy=>pi
   use glide_glenflow, only: glenflow_params
+  use glide_deriv, only: timederiv_params
 
   !++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
@@ -445,9 +446,6 @@ module glide_types
      real(dp),dimension(:,:),  pointer :: oldthck   => null()
      real(dp),dimension(:,:),  pointer :: oldthck2  => null()
      real(dp),dimension(:,:),pointer :: float => null()
-     real(dp),dimension(:,:,:),pointer :: olds      => null()
-     integer  :: nwhich  = 2
-     real(sp) :: oldtime = 0.0
      
      real(dp), dimension(:), pointer :: alpha => null()
      real(dp), dimension(:), pointer :: beta  => null()
@@ -537,6 +535,7 @@ module glide_types
     type(profile_type)   :: profile
     type(glide_prof_type) :: glide_prof
     type(isos_type)      :: isos
+    type(timederiv_params) :: timederivs
   end type glide_global_type
 
 !MH!  !MAKE_RESTART
@@ -621,6 +620,7 @@ contains
     !*FD \end{itemize}
 
     use glimmer_log
+    use glide_deriv, only: timeders_init
 
     implicit none
 
@@ -691,8 +691,8 @@ contains
     call coordsystem_allocate(model%general%ice_grid, model%geometry%mask)
     call coordsystem_allocate(model%general%ice_grid, model%geometry%thkmask)
 
-    allocate(model%thckwk%olds(ewn,nsn,model%thckwk%nwhich))
-    model%thckwk%olds = 0.0d0
+    call timeders_init(model%timederivs,ewn,nsn)
+
     call coordsystem_allocate(model%general%ice_grid, model%thckwk%oldthck)
     call coordsystem_allocate(model%general%ice_grid, model%thckwk%oldthck2)
     call coordsystem_allocate(model%general%ice_grid, model%thckwk%float)
@@ -720,6 +720,8 @@ contains
 
   subroutine glide_deallocarr(model)
     !*FD deallocate model arrays
+
+    use glide_deriv, only: timeders_final
     implicit none
     type(glide_global_type),intent(inout) :: model
 
@@ -777,7 +779,7 @@ contains
     deallocate(model%geometry%mask)
     deallocate(model%geometry%thkmask)
 
-    deallocate(model%thckwk%olds)
+    call timeders_final(model%timederivs)
     deallocate(model%thckwk%oldthck)
     deallocate(model%thckwk%oldthck2)
     deallocate(model%thckwk%float)
